<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_6_fragment_a" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:id="@+id/button_6_zergling"
        android:text="@string/button_6_zergling" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:id="@+id/button_6_queen"
        android:text="@string/button_6_queen" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:id="@+id/button_6_infestor"
        android:text="@string/button_6_infestor" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:id="@+id/button_6_marauder"
        android:text="@string/button_6_marauder" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:id="@+id/button_6_zealot"
        android:text="@string/button_6_zealot" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:id="@+id/button_6_stalker"
        android:text="@string/button_6_stalker" />

</LinearLayout>
