<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.rbezliudko.sixthhomework.Activities.ThirdHomeworkActivity">

    <TextView
        android:id="@+id/text_3_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_3_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/button_3_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_3_1"/>

    <Button
        android:id="@+id/button_3_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_3_2"/>

    <Button
        android:id="@+id/button_3_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_3_3"/>

    <Button
        android:id="@+id/button_3_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_3_4"/>

    <Button
        android:id="@+id/button_return_third"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_return"/>

</LinearLayout>

