<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.rbezliudko.sixthhomework.Activities.FifthHomeworkActivity">

    <Button
        android:id="@+id/button_twinkle"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_5_twinkle"
        android:layout_marginTop="@dimen/button_height"
        android:layout_marginRight="@dimen/button_width"
        android:layout_marginBottom="@dimen/button_width"/>

    <Button
        android:id="@+id/button_spin"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_5_spin"
        android:layout_toRightOf="@id/button_twinkle"
        android:layout_marginTop="@dimen/button_height"
        android:layout_marginBottom="@dimen/button_width" />

    <Button
        android:id="@+id/button_shake"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_5_shake"
        android:layout_below="@id/button_twinkle"
        android:layout_marginRight="@dimen/button_width" />

    <Button
        android:id="@+id/button_stretch"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_5_stretch"
        android:layout_below="@id/button_spin"
        android:layout_toRightOf="@id/button_shake"/>
</RelativeLayout>
